--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ script:
 
 deploy:
   provider: releases
-  token: $GITHUB_TOKEN
+  api_key: $GITHUB_TOKEN
   file: target/DimitrisKafetzis-cv-en.pdf
- skip_cleanup: true
- on:
-     repo: amolofos/CVKafetzisDimitris
-     tags: true
+  skip_cleanup: true
+  on:
+    repo: amolofos/CVKafetzisDimitris
+    branch: master
