--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,14 @@ script:
   - chmod +x latexdockercmd.sh
   - ./latexdockercmd.sh ./scripts/build.sh clean compile
 
+# This is based on https://docs.travis-ci.com/user/deployment/releases/.
+before_deploy:
+  # Set up git user name and tag this commit.
+  - git config --local user.name $GITHUB_USERNAME
+  - git config --local user.email $GITHUB_EMAIL
+  - export TRAVIS_TAG=${TRAVIS_TAG:-v1.0.$(git rev-list --count HEAD)}
+  - git tag $TRAVIS_TAG
+
 deploy:
   provider: releases
   api_key: $GITHUB_TOKEN
