--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,4 +20,4 @@ jobs:
 
       - run: ./scripts/build.sh clean
       - run: ./scripts/build.sh prepare_pipeline
-      - run: ./scripts/build.sh build_pipeline
+      - run: ./scripts/build.sh compile_pipeline
