--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,5 +19,13 @@ jobs:
       - uses: actions/checkout@v4
 
       - run: ./scripts/build.sh clean
-      - run: ./scripts/build.sh prepare_pipeline
-      - run: ./scripts/build.sh compile_pipeline
+      - run: ./scripts/build.sh prepare
+      - run: ./scripts/build.sh compile
+
+
+      - uses: anchore/sbom-action/download-syft@v0.15.0
+
+      - run: curl -sL https://git.io/autotag-install | sudo sh -s -- -b /usr/bin
+
+      # Increment version and tag.
+      - run: autotag --scheme=conventional
