--- a/.github/workflows/prs.yml
+++ b/.github/workflows/prs.yml
@@ -13,7 +13,11 @@ jobs:
   main:
     runs-on: ubuntu-latest
     steps:
+
       - uses: actions/checkout@v4
+        with:
+          # This is important, otherwise it won't checkout the full tree (i.e. no previous tags).
+          fetch-depth: 0
 
       - run: ./scripts/build.sh clean
       - run: ./scripts/build.sh prepare
@@ -23,5 +27,21 @@ jobs:
 
       - run: curl -sL https://git.io/autotag-install | sudo sh -s -- -b /usr/bin
 
+      # Login to ghcr.
+      - uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       # Increment version and tag.
-      - run: autotag --scheme=conventional
+      - run: |
+          # https://github.com/pantheon-systems/autotag#troubleshooting
+          git fetch --tags --unshallow --prune
+
+          if [ $(git rev-parse --abbrev-ref HEAD) != "master" ]; then
+            # ensure a local 'master' branch exists at 'refs/heads/master'
+            git branch --track master origin/master
+          fi
+
+          autotag -v --scheme=conventional -n --branch feature/pipeline
